--- a/src/scss/Results.scss
+++ b/src/scss/Results.scss
@@ -138,11 +138,11 @@ $desktop-width: 1024px;
       tr,
       th,
       td {
-        width: 98vw;
+        width: 96vw;
       }
 
       &-main {
-        width: 95%;
+        width: 90%;
         font-size: 14px;
         margin-left: auto;
         margin-right: auto;
